Alter CSS to prevent Overlapping
The formulize-admin.css file contained one div (homepage-description)
which was to be limited in its width. The other div which contained the
toolbar, had no name or space in the stylesheet, as it was hard-coded
into ui-accordion.html. I added a width limit to this as well, and now
the elements do not overlap.

--- a/modules/formulize/templates/css/formulize-admin.css
+++ b/modules/formulize/templates/css/formulize-admin.css
@@ -1552,6 +1552,7 @@ div.description {
   text-align: left !important; }
 
 .homepage-description {
+  max-width: 45%;
   margin-bottom: 1em;
   margin-top: -20px; }
 
